# beast_websocket

./: README.md
cmake/: compiler_definitions.cmake  compiler_options.cmake  options.cmake  package.cmake
src/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
src/common/include/beast_websocket/: common.hpp  error_code.hpp  log.hpp
src/common/src/: error_code.cpp  log.cpp
src/network/: CMakeLists.txt
src/network/fbs/: message.fbs
src/network/include/beast_websocket/: connection.hpp  connection_manager.hpp  io_context_pool.hpp  message_generated.h  websocket_server.hpp
src/network/src/: connection.cpp  connection_manager.cpp  io_context_pool.cpp  websocket_server.cpp
src/util/include/beast_websocket/: base64.hpp  flatbuffers.hpp  hash.hpp
src/util/src/: base64.cpp  log.cpp
